Revert API jar to Java 8 and update to Java 11 APIs